--- a/Home.html
+++ b/Home.html
@@ -28,10 +28,6 @@
       </ul>
     </div>
   </nav>
-
-  <div class="main slide-right center">
-    <p>Select a Music Category </p>
-  </div>
   <div class="center">
     <button id="modalBtn" class="button">
       <image src="/Images/G.png"></image>
@@ -40,26 +36,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <spam class="closeBtn">&times;</spam>
-          <h4>Select size of Playlist:</h4>
+          <h2>Modal Header</h2>
         </div>
-        <div class="modal-body">
-
-          <input type="radio" id="smallList" name="songList" value="small">
-          <label for="smallList">Small(5 songs)</label><br>
-          <input type="radio" id="mediumList" name="songList" value="medium">
-          <label for="mediumList">Medium(10 songs)</label><br>
-          <input type="radio" id="largeList" name="songList" value="large">
-          <label for="largeList">Large(15 songs)</label><br>
-
-          <button id="playlistSubmitButton">Submit</button>
-
-          <!-- <button class ="modal-time1">Small (5 songs)</button>
-          <button class ="modal-time2">Medium (10 songs)</button>
-          <button class ="modal-time3">Large (15 songs)</button> -->
-        </div>
+        <div class="modal-body"></div>
+        <p>TEST</p>
       </div>
     </div>
-    <br>
     <br>
     <button id="modalBtnT" class="button">
       <image src="/Images/t.png"></image>
@@ -68,19 +50,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <spam class="closeBtn">&times;</spam>
-          <h4>Select size of Playlist:</h4>
+          <h2>Modal Header</h2>
         </div>
-        <div class="modal-body">
-          <input type="radio" id="smallListT" name="songListT" value="small">
-          <label for="smallList">Small(5 songs)</label><br>
-          <input type="radio" id="mediumListT" name="songListT" value="medium">
-          <label for="mediumList">Medium(10 songs)</label><br>
-          <input type="radio" id="largeListT" name="songListT" value="large">
-          <label for="largeList">Large(15 songs)</label><br>
-
-          <button id="playlistSubmitButtonT">Submit</button>
-
-        </div>
+        <div class="modal-body"></div>
+        <p>TEST</p>
       </div>
     </div>
     <br>
@@ -90,23 +63,15 @@
     <div id="simpleModalL" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h4>Select size of Playlist:</h4>
+          <spam class="closeBtn">&times;</spam>
+          <h2>Modal Header</h2>
         </div>
-        <div class="modal-body">
-          <input type="radio" id="smallListL" name="songListL" value="small">
-          <label for="smallList">Small(5 songs)</label><br>
-          <input type="radio" id="mediumListL" name="songListL" value="medium">
-          <label for="mediumList">Medium(10 songs)</label><br>
-          <input type="radio" id="largeListL" name="songListL" value="large">
-          <label for="largeList">Large(15 songs)</label><br>
-
-          <button id="playlistSubmitButtonL">Submit</button>
-        </div>
+        <div class="modal-body"></div>
+        <p>TEST</p>
       </div>
     </div>
   </div>
   <script src="/style.js"></script>
-  <script src="/public/index.js"></script>
 </body>
 
 </html>
