--- a/public/Home.html
+++ b/public/Home.html
@@ -34,7 +34,7 @@
   </div>
   <div class="center">
     <button id="modalBtn" class="button">
-      <image src="/Images/G.png"></image>
+      <image src="/Images/G2.png"></image>
     </button>
     <div id="simpleModal" class="modal">
       <div class="modal-content">
@@ -62,7 +62,7 @@
     <br>
     <br>
     <button id="modalBtnT" class="button">
-      <image src="/Images/t.png"></image>
+      <image src="/Images/T2.png"></image>
     </button>
     <div id="simpleModalT" class="modal">
       <div class="modal-content">
@@ -85,7 +85,7 @@
     </div>
     <br>
     <button id="modalBtnL" class="button">
-      <image src="/Images/L.png"></image>
+      <image src="/Images/L2.png"></image>
     </button>
     <div id="simpleModalL" class="modal">
       <div class="modal-content">
