changed css files

--- a/public/Home.html
+++ b/public/Home.html
@@ -34,7 +34,7 @@
   </div>
   <div class="center">
     <button id="modalBtn" class="button">
-      <image src="/Images/G.png"></image>
+      <image src="images/G.png"></image>
     </button>
     <div id="simpleModal" class="modal">
       <div class="modal-content">
@@ -62,7 +62,7 @@
     <br>
     <br>
     <button id="modalBtnT" class="button">
-      <image src="/Images/t.png"></image>
+      <image src="images/t.png"></image>
     </button>
     <div id="simpleModalT" class="modal">
       <div class="modal-content">
@@ -85,7 +85,7 @@
     </div>
     <br>
     <button id="modalBtnL" class="button">
-      <image src="/Images/L.png"></image>
+      <image src="images/L.png"></image>
     </button>
     <div id="simpleModalL" class="modal">
       <div class="modal-content">
@@ -105,8 +105,8 @@
       </div>
     </div>
   </div>
+  <script src="/index.js"></script>
   <script src="/style.js"></script>
-  <script src="/public/index.js"></script>
 </body>
 
 </html>
