--- a/public/login.html
+++ b/public/login.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" href="/css/dashboard.css">
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/login.css">
+<link rel="stylesheet" href="/public/css/dashboard.css">
+<link rel="stylesheet" href="/public/css/style.css">
 <title>Gym.Tan.Laundry.</title>
 </head>
 <body id="Homepage">
@@ -19,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/Home.html">Home</a>
+              <a class="nav-link" href="/public/Home.html">Home</a>
             </li>
                </ul>
             </div>
